examples/yt_ingress_example/secure-deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-deployment-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secure-app
  template:
    metadata:
      labels:
        app: secure-app

    spec:
      containers:
        - name: nginx
          image : nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443

          volumeMounts:
            - name: tls-secret
              mountPath: /etc/nginx/tls
              readOnly: true

            - name: nginx-config
              mountPath: /etc/nginx/conf.d

      volumes:
        - name: tls-secret
          secret:
            secretName: tls-secret

        - name: nginx-config
          configMap:
            name: nginx-ssl-config
