examples/yt_ingress_example/secure-services-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-service-app
spec:
  selector:
    app: secure-app
  ports:
    - name: https
      port: 443
      targetPort: 8443
