examples/yt_ingress_example/services-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service-app
spec:
  selector:
    app: ingress-app
  ports:
    - port: 80
      targetPort: 80
