examples/yt_ingress_example/ingress-tls-edge-temination.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls-edge-termination
spec:
  tls:
    - hosts:
        - app.host.com
      secretName: tls-secret

  rules:
    - host: app.host.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-service-app
                port:
                  number: 80
