examples/yt_ingress_example/ingress-wildcard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "*.host.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-service-app
                port:
                  number: 80
