examples/yt_ingress_example/secure-ingress-ssl-binding.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl-binding

  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.host.com
      secretName: ingress-tls-secret
  rules:
    - host: app.host.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secure-service-app
                port:
                  number: 443
